@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: cerebrod.c,v 1.52 2005-05-19 23:38:46 achu Exp $
+ *  $Id: cerebrod.c,v 1.53 2005-05-26 18:23:38 achu Exp $
 \*****************************************************************************/
 
 #if HAVE_CONFIG_H
@@ -128,6 +128,7 @@ int
 main(int argc, char **argv)
 {
   cerebro_err_init(argv[0]);
+  wrappers_err_init(argv[0]);
 #if CEREBRO_DEBUG
   cerebro_err_set_flags(CEREBRO_ERROR_STDERR 
 			| CEREBRO_ERROR_SYSLOG 
@@ -137,6 +138,8 @@ main(int argc, char **argv)
   cerebro_err_set_flags(CEREBRO_ERROR_STDERR 
 			| CEREBRO_ERROR_SYSLOG);
 #endif /* !CEREBRO_DEBUG */
+  wrappers_err_set_flags(WRAPPERS_ERROR_STDERR 
+                         | WRAPPERS_ERROR_SYSLOG);
 
   _cerebrod_pre_config_initialization();
 
@@ -151,6 +154,7 @@ main(int argc, char **argv)
       cerebro_err_set_flags(CEREBRO_ERROR_SYSLOG
 			    | CEREBRO_ERROR_LIB
 			    | CEREBRO_ERROR_MODULE);
+      wrappers_err_set_flags(WRAPPERS_ERROR_SYSLOG);
     }
   else
     {
@@ -159,6 +163,8 @@ main(int argc, char **argv)
       cerebro_err_set_flags(CEREBRO_ERROR_STDERR 
 			    | CEREBRO_ERROR_LIB
 			    | CEREBRO_ERROR_MODULE);
+      wrappers_err_set_flags(WRAPPERS_ERROR_STDERR 
+                             | WRAPPERS_ERROR_SYSLOG);
     }
 #else  /* !CEREBRO_DEBUG */
   cerebrod_daemon_init();
