@@ -1,3 +1,9 @@
+2005-05-26  Albert Chu  <chu11@llnl.gov>
+
+	* Continue work on metric server.
+
+	* Various bug fixes.
+
 2005-05-25  Albert Chu  <chu11@llnl.gov>
 
 	* Continue work on metric server.
